# engineering-epq

./: .gitignore  README.md
EngineeringEPQ/: App.js  app.json  package-lock.json  package.json  run_android.sh
EngineeringEPQ/android/: settings.gradle
EngineeringEPQ/android/app/: BUCK  build.gradle
EngineeringEPQ/android/app/src/main/: AndroidManifest.xml
EngineeringEPQ/android/app/src/main/assets/: index.android.bundle
EngineeringEPQ/android/app/src/main/java/com/engineeringepq/: MainActivity.java  MainApplication.java
EngineeringEPQ/android/app/src/main/res/values/: strings.xml
EngineeringEPQ/ios/EngineeringEPQ/: AppDelegate.m  Info.plist
EngineeringEPQ/ios/EngineeringEPQ.xcodeproj/: project.pbxproj
EngineeringEPQ/ios/EngineeringEPQ.xcodeproj/xcshareddata/xcschemes/: EngineeringEPQ-tvOS.xcscheme  EngineeringEPQ.xcscheme
EngineeringEPQ/ios/EngineeringEPQ/Base.lproj/: LaunchScreen.xib
EngineeringEPQ/ios/EngineeringEPQTests/: EngineeringEPQTests.m
EngineeringEPQ/lib/: steps.js
footpath-tinkering/: Cargo.toml
footpath-tinkering/src/: main.rs
gantt/: Gantt.gan
routing-server/: Cargo.toml
writeup/: Writeup.lyx  references.bib
